# scrap_indicadores

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/release-please/: config.json
.github/workflows/: ci.yml  docker-build.yml  release.yml
scrap_indicadores/: main.py  makefile  pyproject.toml
scrap_indicadores/notebooks/: validacao_picos.ipynb
scrap_indicadores/src/scrap_indicadores/: __init__.py  extract_picos.py  picos_indicators.py
scrap_indicadores/test/: test_picos_indicators.py  test_picos_scraping.py
scrap_indicadores/test/fixtures/picos/: indicators_expected.csv  pni_picos_expected.csv  pni_raw.csv  sih_picos_expected.csv  sih_raw.csv  sim_api_indicators_expected.csv  sim_api_picos_sample_expected.csv  sim_picos_expected.csv  sim_raw.csv  sinan_picos_expected.csv  sinan_raw.csv
